# pyRobotiqGripper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyRobotiqGripper.py  pyproject.toml  realTimeData.json  requirements.txt  robotiqGripper.py  setup.py  test.py  test_gripper_hardware.py
.github/workflows/: release.yaml
Examples/: joystick.py
docs/: .gitignore  advanced_usage.rst  api.rst  basic_usage.rst  conf.py  connection.rst  home.rst  index.rst  installation.rst  requirements.in  requirements.txt  robotiqGripper.rst  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  robotiqGripper.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  robotiqGripper.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  robotiqGripper.html
docs/_build/html/_sources/: modules.rst.txt
docs/_static/: custom.css
pyRobotiqGripper/: pyRobotiqGripper.py
pyrobotiqgripper/: __init__.py  constants.py  exceptions.py  gripper.py  joystick_cli.py  utils.py
