
[tool.poetry]
name = "pyrobotiqgripper"
version = "2.0.7"
authors = ["Benoit CASTETS <opensourceeng@gmail.com>"]
description = "Python Driver for Robotiq Grippers"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "pyrobotiqgripper"}]


[tool.poetry.urls]
Homepage = "https://github.com/castetsb/pyRobotiqGripper"
Issues = "https://github.com/castetsb/pyRobotiqGripper/issues"


[tool.poetry.dependencies]
python = ">=3.8"
pymodbus = "^3.12.1"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"