
[project]
name = "pyrobotiqgripper"
version = "3.2.3"
authors = [{name="Benoit CASTETS", email = "opensourceeng@gmail.com"}]
description = "Python Driver for Robotiq Grippers"
readme = "README.rst"
requires-python = ">=3.8,<3.15"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymodbus>=3.12.1",
    "pyserial>=3.5",
    "numpy>=1.28",
    "pandas>=1.5",
    "pygame>=2.5.2",
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pyrobotiqgripper"]
module-root = ""

[project.urls]
homepage = "https://github.com/castetsb/pyRobotiqGripper"
tracker = "https://github.com/castetsb/pyRobotiqGripper/issues"

[project.scripts]
pyrobotiqgripper-joystick = "pyrobotiqgripper.joystick_cli:main"
